--- a/AnimalSniper.CSharp.csproj
+++ b/AnimalSniper.CSharp.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Gun\Gun.cs" />
     <Compile Include="Assets\Scripts\Gun\Magazine.cs" />
+    <Compile Include="Assets\Scripts\Gun\Zoom.cs" />
     <Compile Include="Assets\Scripts\Player\CameraMove.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMove.cs" />
